@@ -5,12 +5,13 @@
 == DDT 0.10.0  ===
  * Added DUB support.
    * Modify buildpath to include dub dependencies.
+   * DUB describe console output
  TODO:
-   * Create a job to allow stopping DUB run. Remove timeout.
    * UI actions for DUB Elements in navigator
    * DLTK Model elements in Project Explorer
     * UI actions
    * get parent
+   * DUB program path preference.
    * automatic Compiler Library setup from DUB.
    * remove DLTK outdated UI
    * DUB build support
